tests/miniJava/neg/000217_mutation.MiniJava
class java { public static void class java { public static void Main ( String [ ] java ) { { } } } Main ( String [ ] java ) { { } } }
